[package]
edition = "2021"
name = "i3wsr"
version = "3.0.0"
description = "A workspace renamer for i3 and Sway window managers that dynamically updates workspace names based on their content. It monitors window events and renames workspaces to show the applications running in them."
authors = ["Daniel Berg <mail@roosta.sh>"]
repository =  "https://github.com/roosta/i3wsr"
documentation =  "https://github.com/roosta/i3wsr"
readme = "README.md"
keywords = ["i3-wm", "window-manager", "workspaces", "linux"]
categories = ["gui", "window-manager"]
license = "MIT"
exclude = ["/script", "/assets/*", "Vagrantfile"]

[badges]
travis-ci = { repository = "roosta/i3wsr" }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13"
regex = "1.11"
dirs = "5.0"
thiserror = "1.0"
swayipc = "3.0"
colored = "2"

# log = "0.4"

# [dependencies.i3ipc]
# git = 'https://github.com/roosta/i3ipc-rs'
# path = "../i3ipc-rs"
