[package]
edition = "2021"
name = "i3wsr"
version = "3.1.2"
description = "A dynamic workspace renamer for i3 and Sway that updates names to reflect their active applications."
authors = ["Daniel Berg <mail@roosta.sh>"]
repository =  "https://github.com/roosta/i3wsr"
readme = "README.md"
keywords = ["i3", "workspaces", "linux", "sway"]
categories = ["gui", "command-line-utilities", "config"]
license = "MIT"
exclude = ["/script", "/assets/*", "Vagrantfile"]

[lib]
name = "i3wsr_core"
path = "src/lib.rs"

[[bin]]
name = "i3wsr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13"
regex = "1.11"
dirs = "5.0"
thiserror = "1.0"
swayipc = "3.0"
colored = "2"
